[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/pilha_menos.png" type="Texture" id=1]
[ext_resource path="res://scripts/Objetos/Pilha.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.8891, 21.1661 )

[node name="Pilha" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Colisao" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_Pilha_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_Pilha_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Pilha_mouse_exited"]
